--- a/registre.phtml
+++ b/registre.phtml
@@ -1,4 +1,5 @@
 <script src="form.js"></script>
+<script src="script.js"></script>
 
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <!-- Login Form -->
