--- a/styles/style2.css
+++ b/styles/style2.css
@@ -158,7 +158,7 @@ aside .toggle .logo img{
 aside .toggle .close{
     padding-right: 1rem;
     display: none;
-    font-size: 27px;
+    font-size: 0px;
 }
 
 aside .sidebar{
@@ -1057,7 +1057,7 @@ main .recent-orders a{
     }
 
     aside .toggle .close{
-        display: inline-block;
+        display: block;
         cursor: pointer;
     }
 
