--- a/layout.phtml
+++ b/layout.phtml
@@ -13,6 +13,9 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet"> -->
     <title> <?= $title ?></title>
+   <script src="script.js"></script>
+
+
 </head>
 
 <body>
