--- a/layout1.phtml
+++ b/layout1.phtml
@@ -15,6 +15,10 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <title> <?= $title ?></title>
+   <script src="script.js"></script>
+
+    
+
 </head>
 
 <body>
