--- a/layout2.phtml
+++ b/layout2.phtml
@@ -8,6 +8,8 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="<?= $style ?>">
    <title> <?= $title ?></title>
+   <script src="script.js"></script>
+
 </head>
 
 <body>
