--- a/dashbord.phtml
+++ b/dashbord.phtml
@@ -12,7 +12,7 @@
                 </div>
             </div>
 
-            <div class="sidebar">
+            <div class="sidebar" class="active">
                 <a href="dashbord.php">
                     <span class="material-icons-sharp">dashboard</span>
                     <h3>Dashboard</h3>
@@ -21,11 +21,11 @@
                     <span class="material-icons-sharp">book</span>
                     <h3>Books</h3>
                 </a>
-                <a href="members.php" class="active">
+                <a href="members.php" >
                     <span class="material-icons-sharp">person_outline</span>
                     <h3>Members</h3>
                 </a>
-                <a href="Borrow.php" >
+                <a href="Borrow and return/borrow.php" >
                     <span class="material-icons-sharp">sync_alt</span>
                     <h3>Borrow/Return</h3>
                 </a>
