--- a/members.phtml
+++ b/members.phtml
@@ -25,7 +25,7 @@
                     <span class="material-icons-sharp">person_outline</span>
                     <h3>Members</h3>
                 </a>
-                <a href="Borrow.php" >
+                <a href="Borrow and return/borrow.php" >
                     <span class="material-icons-sharp">sync_alt</span>
                     <h3>Borrow/Return</h3>
                 </a>
